--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
             <div class="experience-section">
                 <h2 class="section-title">Experience</h2>
                 <div class="experience-item">
-                    <img class="experience-logo" src="./company-logo.png" alt="Company Logo">
+                    <img class="experience-logo" src="./experience.png" alt="Company Logo">
                     <div class="experience-details">
                         <h3>Senior Software Engineer</h3>
                         <p>Google | Jan 2020 - Present</p>
@@ -442,7 +442,7 @@
             <div class="activities-section">
                 <h2 class="section-title">Activities</h2>
                 <div class="activity-item">
-                    <img class="activity-logo" src="./activity-logo.png" alt="Activity Logo">
+                    <img class="activity-logo" src="./activity.png" alt="Activity Logo">
                     <div class="activity-details">
                         <h3>Volunteer at Code for Good</h3>
                         <p>Providing mentorship and technical support for open-source projects aimed at community
@@ -474,7 +474,7 @@
             <div class="sidebar-card">
                 <h2 class="sidebar-title">People also viewed</h2>
                 <div class="connection-item">
-                    <img class="connection-avatar" src="./connection1.jpg" alt="Connection 1">
+                    <img class="connection-avatar" src="./man.jpeg" alt="Connection 1">
                     <div class="connection-info">
                         <p class="connection-name">Jane Smith</p>
                         <p class="connection-headline">Full Stack Developer at Microsoft</p>
